add use cases
