# entities/ticket/ticket_auth_request.go
@@ -1,0 +1,5 @@
+package entities
+
+type TicketAuthRequest struct {
+    VerificationCode string `json:"verification_code" validate:"required"`
+}
