# entities/ticket/ticket_refund_request.go
@@ -1,0 +1,5 @@
+package entities
+
+type TicketRefundRequest struct {
+    TicketID uint `json:"ticket_id" validate:"required"`
+}
