# routes/routes.go
@@ -40,6 +40,10 @@ func SetupRouter(
 		api.POST("/tickets", ticketController.CreateTicket)
 		api.PUT("/tickets/:id", ticketController.UpdateTicket)
 		api.DELETE("/tickets/:id", ticketController.DeleteTicket)
+		api.POST("/tickets/purchase", ticketController.PurchaseTicket)
+		api.POST("/tickets/sell", ticketController.SellTicket)
+		api.POST("/tickets/authenticate", ticketController.AuthenticateTicket)
+		api.POST("/tickets/refund", ticketController.RefundTicket)
 		api.GET("/transactions", transactionController.GetAllTransactions)
 		api.GET("/transactions/:id", transactionController.GetTransactionByID)
 		api.POST("/transactions", transactionController.CreateTransaction)
